logica del resigro lista

--- a/src/components/CardListado/CardListado.module.css
+++ b/src/components/CardListado/CardListado.module.css
@@ -83,4 +83,33 @@
 
 .divListado .containerArray .containerTabla tbody tr td {
   padding: 10px;
+  min-width: 40px;
+  max-width: 120px;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.divListado .containerArray .containerTabla tbody tr td button {
+  appearance: none;
+  background-color: var(--bg-color-transparent);
+  border: none;
+  font-size: 20px;
+}
+
+.divListado .containerArray .containerTabla tbody tr td button:hover {
+  cursor: pointer;
+}
+
+.divListado .containerArray .containerTabla tbody tr td .btnEliminar {
+  color: var(--bg-color-6);
+}
+.divListado .containerArray .containerTabla tbody tr td .btnEditar {
+  color: var(--bg-color-1);
+}
+
+.divListado .containerArray .containerTabla tbody tr .salario span {
+  width: 100%;
+  color: var(--bg-color-2);
+  padding: 10px 20px;
+  border-radius: 25px;
 }
