--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   --bg-color-3: #808080;
   --bg-color-4: #000000;
   --bg-color-5: #cbcbcb8f;
+  --bg-color-6: #ff00008f;
+  --bg-color-7: #ff0000;
+  --bg-color-8: #ffae00;
+  --bg-color-9: #389601;
+  --bg-color-10: #00000022;
 }
 
 * {
